// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HotelCard /> renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#EFEFEF",
        "borderBottomLeftRadius": 70,
        "borderBottomRightRadius": 70,
        "height": 500,
        "marginBottom": 71,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 71,
        "width": 600,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source="test"
    style={
      Object {
        "maxHeight": 240,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 36,
          "paddingTop": 36,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 24,
            "lineHeight": 36,
          },
          Object {
            "color": "#585858",
          },
        ]
      }
    >
       
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Inter_400Regular",
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#6A0DFB",
            "marginVertical": 12,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 24,
            "lineHeight": 36,
          },
          Object {
            "color": "#585858",
          },
        ]
      }
    >
      INN
       
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Inter_400Regular",
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#585858",
          },
        ]
      }
    >
      R$
       
    </Text>
  </View>
</View>
`;

exports[`<TeamCard /> renders correctly 1`] = `
<View>
  <Image
    style={
      Object {
        "height": 354,
        "marginLeft": 14,
        "marginRight": 14,
        "width": 312,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 24,
          "lineHeight": 36,
        },
        Object {
          "color": "#6A0DFB",
          "textAlign": "center",
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Inter_400Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "color": "#585858",
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;
